src/test/deca/syntax/valid/personal/comment.deca
// Description:
//    Programme minimaliste utilisant un commentaire .
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2025

/* je dois etre ignoré */