src/test/deca/syntax/invalid/provided/include_levide.deca
// Description:
//    Programme qui inclue un fichier sans sens 
//
// Resultats:
//    erreur 
//
// Historique:
//    cree le 3/01/2025

#include ""